bare/jenkins-deployment.yaml
# https://github.com/marcel-dempers/docker-development-youtube-series/tree/master/jenkins
# RUN "jenkins-rbac.yaml" FIRST
---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins
  labels:
    app: jenkins
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
        tier: frontend
    spec:
      serviceAccountName: jenkins
      # hostNetwork: true
      # hostPID: true
      containers:
      - name: jenkins
        image: dalexander2israel/jenkins:lts-centos
        imagePullPolicy: Always
        resources:
          limits:
            memory: 2048Mi
            cpu: 500m
          requests:
            cpu: 250m
            memory: 1024Mi
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins
        - mountPath: /var/run/
          name: docker-host
      restartPolicy: Always
      securityContext:
        privileged: true
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      volumes:
      - name: jenkins
        # emptyDir: {}  # Data is not persisted across pod failures
        persistentVolumeClaim:    # Data is persisted across pod failures
          claimName: jenkins-pvc
      - name: docker-host
        hostPath:
          path: /var/run/docker.sock


---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
    - name: ui
      port: 8080
      targetPort: 8080      
      protocol: TCP
      nodePort: 32001
    - name: slave
      port: 50000
      targetPort: 50000
    - name: http
      port: 80
      targetPort: 80
