bare/scalar-jenkins-deployment.yaml
# https://github.com/marcel-dempers/docker-development-youtube-series/tree/master/jenkins
# RUN "jenkins-rbac.yaml" FIRST
---

apiVersion: v1
kind: Namespace
metadata:
  name: jenkins

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: scalar-jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      # hostNetwork: true
      # hostPID: true
      containers:
      - name: jenkins
        image: registry.dellius.app/jenkins:lts-centos-v2.277.2.scaler
        imagePullPolicy: Always
        resources:
          limits:
            memory: 2048Mi
            cpu: 500m
          requests:
            cpu: 250m
            memory: 1024Mi
        ports:
        - containerPort: 50000
          name: slave
          protocol: TCP
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        volumeMounts:
        - mountPath: /var/jenkins_home
          name: jenkins-data
        - mountPath: /var/run/docker.sock
          name: docker-host
        securityContext:
          privileged: true
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
      - name: dellius-private-registry 
      volumes:
      - name: jenkins-data
        emptyDir: {}  # Data is not persisted across pod failures
        # persistentVolumeClaim:    # Data is persisted across pod failures
        #   claimName: jenkins-pvc
      - name: docker-host
        hostPath:
          path: /var/run/docker.sock


---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: scalar-jenkins
  labels:
    app: jenkins
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
    nodePort: 30880
  - name: https
    port: 443
    targetPort: 443
    nodePort: 31443
    protocol: TCP
  - name: slave
    port: 50000
    targetPort: 50000
    protocol: TCP

# ---
# apiVersion: networking.k8s.io/v1
# kind: IngressClass
# metadata:
#   name: jenkins-external-lb
#   namespace: ingress-nginx
# spec:
#   controller: jenkins.dellius.app/ingress-nginx-controller
#   parameters:
#     apiGroup: k8s.jenkins.dellius.app
#     kind: IngressParameters
#     name: jenkins-external-lb

# ---
# # 
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jenkins-ingress
#   namespace: ingress-nginx
# spec:
#   tls:
#   - hosts:
#       - jenkins.dellius.app
#     secretName: ingress-nginx-admission
#   rules:
#     - host: jenkins.dellius.app
#       http:
#         paths:
#         - pathType: Prefix
#           path: "/"
#           backend:
#             service:
#               name: jenkins-svc
#               port:
#                 number: 80

# ---
# # 
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jenkins-ingress
#   namespace: ingress-nginx
# spec:
#   rules:
#   - host: jenkins.dellius.app
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: jenkins-svc
#             port:
#               number: 80
# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: jenkins-ingress-tls
#   namespace: scalar-jenkins
# spec:
#   tls:
#   - hosts:
#       - jenkins.dellius.app
#     secretName: ingress-nginx-admission
#   rules:
#   - host: jenkins.dellius.app
#     http:
#       paths:
#       - path: /login
#         pathType: Prefix
#         backend:
#           service:
#             name: jenkins-svc
#             port:
#               number: 80
#   - host: jenkins.dellius.app
#     http:
#       paths:
#       - path: /login
#         pathType: Prefix
#         backend:
#           service:
#             name: jenkins-svc
#             port:
#               number: 443
